added to forms.html and forms.css

--- a/forms.html
+++ b/forms.html
@@ -9,145 +9,147 @@
 </head>
 
 <body>
-    <!-- headers -->
-    <h1>Membership Application</h1>
-    <h3>To Apply for membership, please complete all questions.</h3>
+    <div id="main">
+        <!-- headers -->
+        <h1>Membership Application</h1>
+        <h3>To Apply for membership, please complete all questions.</h3>
 
-    <hr>
+        <hr>
 
-    <!-- main form -->
-    <form action="">
-        <fieldset>
-            <legend>
-                <h3>Personal Details</h3>
-            </legend>
-            <table>
-                <tr>
-                    <td>
-                        <label for="name"><b>Name</b></label>
-                    </td>
-                    <td>
-                        <input id="name" type="text" placeholder="First Name">
-                    </td>
-                    <td>
-                        <input type="text" placeholder="Last Name">
-                    </td>
-                </tr>
+        <!-- main form -->
+        <form action="">
+            <fieldset>
+                <legend>
+                    <h3>Personal Details</h3>
+                </legend>
+                <table>
+                    <tr>
+                        <td>
+                            <label for="name"><b>Name</b></label>
+                        </td>
+                        <td>
+                            <input id="name" type="text" placeholder="First Name">
+                        </td>
+                        <td>
+                            <input type="text" placeholder="Last Name">
+                        </td>
+                    </tr>
 
-            </table>
-        </fieldset>
-        <br>
+                </table>
+            </fieldset>
+            <br>
 
-        <fieldset>
-            <legend>
-                <h3>Location</h3>
-            </legend>
-            <table>
-                <tr>
-                    <td>
-                        <label for="address"><b>Address</b></label>
-                    </td>
-                    <td colspan="2">
-                        <input type="text" id="address" size="48" placeholder="Street Address">
-                    </td>
-                </tr>
+            <fieldset>
+                <legend>
+                    <h3>Location</h3>
+                </legend>
+                <table>
+                    <tr>
+                        <td>
+                            <label for="address"><b>Address</b></label>
+                        </td>
+                        <td colspan="2">
+                            <input type="text" id="address" size="48" placeholder="Street Address">
+                        </td>
+                    </tr>
 
-                <tr>
-                    <td></td>
-                    <td colspan="2">
-                        <input type="text" id="address" size="48" placeholder="Street Address Line 2">
-                    </td>
-                </tr>
+                    <tr>
+                        <td></td>
+                        <td colspan="2">
+                            <input type="text" id="address" size="48" placeholder="Street Address Line 2">
+                        </td>
+                    </tr>
 
-                <tr>
-                    <td></td>
-                    <td>
-                        <input type="text" placeholder="City">
-                    </td>
-                    <td>
-                        <input type="text" placeholder="State/Province">
-                    </td>
-                </tr>
+                    <tr>
+                        <td></td>
+                        <td>
+                            <input type="text" placeholder="City">
+                        </td>
+                        <td>
+                            <input type="text" placeholder="State/Province">
+                        </td>
+                    </tr>
 
-                <tr>
-                    <td></td>
-                    <td>
-                        <input type="number" placeholder="Postal/Zip Code">
-                    </td>
-                    <td>
-                        <select>
-                            <option value="0">Please Select</option>
-                            <option value="1">Canada</option>
-                            <option value="2">Nigeria</option>
-                            <option value="3">United States</option>
-                        </select>
-                    </td>
-                </tr>
+                    <tr>
+                        <td></td>
+                        <td>
+                            <input type="number" placeholder="Postal/Zip Code">
+                        </td>
+                        <td>
+                            <select>
+                                <option value="0">Please Select</option>
+                                <option value="1">Canada</option>
+                                <option value="2">Nigeria</option>
+                                <option value="3">United States</option>
+                            </select>
+                        </td>
+                    </tr>
 
-            </table>
-        </fieldset>
-        <br>
+                </table>
+            </fieldset>
+            <br>
 
-        <fieldset>
-            <legend>
-                <h3>Contact Details</h3>
-            </legend>
-            <table>
-                <tr>
-                    <td>
-                        <label for="email"><b>E-mail</b></label>
-                    </td>
-                    <td colspan="2">
-                        <input type="email" id="email" size="30" placeholder="ex: myname@example.com">
-                    </td>
-                </tr>
+            <fieldset>
+                <legend>
+                    <h3>Contact Details</h3>
+                </legend>
+                <table>
+                    <tr>
+                        <td>
+                            <label for="email"><b>E-mail</b></label>
+                        </td>
+                        <td colspan="2">
+                            <input type="email" id="email" size="30" placeholder="ex: myname@example.com">
+                        </td>
+                    </tr>
 
-                <tr>
-                    <td>
-                        <label for="area-code"><b>Home Number</b></label>
-                    </td>
-                    <td>
-                        <input type="text" name="" id="area-code" placeholder="Area Code" size="5">
-                        - <input type="number" placeholder="Phone Number" size="13">
-                    </td>
-                </tr>
+                    <tr>
+                        <td>
+                            <label for="area-code"><b>Home Number</b></label>
+                        </td>
+                        <td>
+                            <input type="text" name="" id="area-code" placeholder="Area Code" size="5">
+                            - <input type="number" placeholder="Phone Number" size="13">
+                        </td>
+                    </tr>
 
-                <tr>
-                    <td>
-                        <label for="areaCode"><b>Cellular Number</b></label>
-                    </td>
-                    <td>
-                        <input type="text" name="" id="areaCode" placeholder="Area Code" size="5">
-                        - <input type="number" placeholder="Phone Number" size="13">
-                    </td>
-                </tr>
+                    <tr>
+                        <td>
+                            <label for="areaCode"><b>Cellular Number</b></label>
+                        </td>
+                        <td>
+                            <input type="text" name="" id="areaCode" placeholder="Area Code" size="5">
+                            - <input type="number" placeholder="Phone Number" size="13">
+                        </td>
+                    </tr>
 
-                <tr>
-                    <td>
-                        <label for="work"><b>Work Number</b></label>
-                    </td>
-                    <td>
-                        <input type="text" id="work" placeholder="Area Code" size="5">
-                        - <input type="number" placeholder="Phone Number" size="13">
-                    </td>
-                </tr>
+                    <tr>
+                        <td>
+                            <label for="work"><b>Work Number</b></label>
+                        </td>
+                        <td>
+                            <input type="text" id="work" placeholder="Area Code" size="5">
+                            - <input type="number" placeholder="Phone Number" size="13">
+                        </td>
+                    </tr>
 
-                <tr>
-                    <td>
-                        <label for="website"><b>Website</b></label>
-                    </td>
-                    <td>
-                        <input type="text" id="website" placeholder="Website" size="35">
-                    </td>
-                </tr>
-            </table>
-        </fieldset>
-        <br>
+                    <tr>
+                        <td>
+                            <label for="website"><b>Website</b></label>
+                        </td>
+                        <td>
+                            <input type="text" id="website" placeholder="Website" size="35">
+                        </td>
+                    </tr>
+                </table>
+            </fieldset>
+            <br>
 
-        <label for="signature"><b>Signature</b></label>
-        <br>
-        <textarea id="signature" cols="50" rows="15"></textarea>
-    </form>
+            <label for="signature"><b>Signature</b></label>
+            <br>
+            <textarea id="signature" cols="50" rows="15"></textarea>
+        </form>
+    </div>
 </body>
 
 </html>
