--- a/jsExercises.html
+++ b/jsExercises.html
@@ -11,18 +11,22 @@
     <script>
         // javaScript ToDo's take the expression put it in a variable and console the variable return the answer to the questions in js comment format after each console.log() statement.
         //Example
+
         //1) What does the following expression return? first_name = "cindy";
         var first_name = 'cindy';
         console.log(first_name);
+        // Answer - the expression returns cindy
+
 
         //1) What does the following expression return? 3 + 2;
         var add_numbers = 3 + 2;
         console.log(add_numbers);
         //Answer - the expression returns 5
 
+
         //2) What does the following expression return? typeof(3);
         var data_type = typeof (3);
-        console.log(data_type)
+        console.log(data_type);
         //Answer - The expression returns number
 
 
@@ -35,38 +39,43 @@
         //4) What does the following expression return? 5 / 0;
         var division = 5 / 0;
         console.log(division);
-        //Ans - the expression returns Infinity
+        //Answer - the expression returns Infinity
 
 
         //5) What does the following expression return? 3/ 'bob';
         var division2 = 3 / 'bob';
         console.log(division2);
-        //Ans - the expression returns NaN
+        //Answer - the expression returns NaN
 
 
         //6) What does the following expression return? NaN === NaN;
         var test = NaN === NaN;
         console.log(test);
+        //Ans - the expression returns false
 
 
         //7) What does the following expression return? typeof(NaN);
         var test2 = typeof (NaN);
         console.log(test2);
+        //Answer - the expression returns number
+
 
         //8) What does the following expression return? isNaN(NaN);;
         var test3 = isNaN(NaN);
         console.log(test3);
+        //Answer - the expression returns true
 
 
         //9) What does the following expression return?Math.pow(2, 3);
         var power = Math.pow(2, 3);
         console.log(power);
+        //Answer - the expression returns 8
+
 
         //10) What does the following expression return? hello;
         /* var greet = hello;
         console.log(greet); */
-
-        //Answer - The expression returns "Uncaught ReferenceError: hello is not defined at jsExercises.html: 66"
+        // Answer - The expression returns "Uncaught ReferenceError: hello is not defined at jsExercises.html: 66"
 
         //11) What does the following expression return? var y;y === "cool";
         var y; y === "cool";
@@ -93,7 +102,7 @@
         //15)Set the variable hobby to the string "programming".
         var hobby = "programming";
         console.log(hobby);
-
+        // Answer - The expression returns programming
     </script>
 </body>
 
